# Sistema_de_Pedido_Lanchonete

./: .coverage  .env  .gitignore  README  README.md  database.py  main.py  models.py  pyproject.toml  schemas.py  security.py
crud/: combo_crud.py  product_crud.py
lanchonete/project/: .gitignore  INSTRUCOES_IMAGENS.md  Makefile  README.md  pyproject.toml  render.yaml
lanchonete/project/backend/: .env.example  .gitignore  DEPLOY.md  Dockerfile  dev.db  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  run.py  seed.py
lanchonete/project/backend/alembic/: env.py
lanchonete/project/backend/alembic/versions/: 001_initial.py  171ada7615a6_add_product_options.py  1d9567c9d5e4_make_option_item_id_nullable.py  2a9699ea4f06_add_image_path_to_product.py  37fe72372c02_add_promotion_fields_to_options.py  680eacaeee84_add_promotional_fields_to_product.py  970ebb02648d_add_order_editing_fields.py  a1b2c3d4e5f6_add_delivery_fee_timestamps_and_cash_register.py  b5f85efe8bff_add_option_quantities_and_constraints.py  c57279927dcc_add_promotions_table.py  d0049c4a106b_add_notes_to_order_items.py  ec70d03187fa_add_promotion_active_days.py
lanchonete/project/backend/app/: main.py
lanchonete/project/backend/app/api/v1/: __init__.py  analytics.py  auth.py  categories.py  chat.py  deliveries.py  orders.py  products.py  promotions.py  users.py  webhooks.py  websockets.py
lanchonete/project/backend/app/core/: config.py  database.py  deps.py  exceptions.py  middleware.py  security.py  websocket.py
lanchonete/project/backend/app/models/: __init__.py  base.py  cash_register.py  category.py  chat_session.py  delivery.py  notification.py  order.py  product.py  promotion.py  stock_log.py  user.py
lanchonete/project/backend/app/schemas/: analytics.py  auth.py  base.py  category.py  delivery.py  order.py  product.py  promotion.py  stock.py  user.py
lanchonete/project/backend/app/services/: auth_service.py  cash_register_service.py  category_service.py  delivery_service.py  order_service.py  product_service.py  promotion_service.py  user_service.py
lanchonete/project/backend/app/tasks/: ai_tasks.py  celery_app.py  notifications.py  whatsapp.py
lanchonete/project/backend/requirements/: base.txt  dev.txt  prod.txt
lanchonete/project/backend/tests/: conftest.py  test_security.py
lanchonete/project/backend/tests/api/: test_analytics_endpoints.py  test_auth_endpoints.py  test_categories_endpoints.py  test_deliveries_endpoints.py  test_orders_endpoints.py  test_products_endpoints.py
lanchonete/project/backend/tests/services/: test_auth_service.py  test_cash_register_service.py  test_category_service.py  test_delivery_service.py  test_order_service.py  test_product_service.py
lanchonete/project/docs/stories/: README.md  motoboy-cozinha-tabs.md
lanchonete/project/frontend/: .env.local.example  .gitignore  DEPLOY.md  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
lanchonete/project/frontend/src/app/: globals.css  layout.tsx  page.tsx
lanchonete/project/frontend/src/app/(auth)/: layout.tsx
lanchonete/project/frontend/src/app/(auth)/login/: page.tsx
lanchonete/project/frontend/src/app/(public)/: layout.tsx
lanchonete/project/frontend/src/app/(public)/cardapio/: page.tsx
lanchonete/project/frontend/src/app/admin/: layout.tsx
lanchonete/project/frontend/src/app/admin/caixa/: page.tsx
lanchonete/project/frontend/src/app/atendente/: layout.tsx  page.tsx
lanchonete/project/frontend/src/app/cozinha/: layout.tsx  page.tsx
lanchonete/project/frontend/src/app/motoboy/: layout.tsx  page.tsx
lanchonete/project/frontend/src/components/cardapio/: ProductCard.tsx
lanchonete/project/frontend/src/components/layout/: AdminSidebar.tsx  AtendenteSidebar.tsx  MotoboyShell.tsx  MotoboySidebar.tsx  Navbar.tsx  Providers.tsx
lanchonete/project/frontend/src/components/ui/: Badge.tsx  Button.tsx  ConfirmModal.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Spinner.tsx  index.ts
lanchonete/project/frontend/src/hooks/: useAnalytics.ts  useAuth.ts  useCashRegister.ts  useDeliveries.ts  useOrders.ts  useProducts.ts  usePromotions.ts  useWebSocket.ts
lanchonete/project/frontend/src/lib/: api.ts  utils.ts
lanchonete/project/frontend/src/store/: auth.ts
lanchonete/project/frontend/src/types/: index.ts
lanchonete/project/markdown/: story_gestao_financeira.md
lanchonete/project/scripts/: setup.ps1
(+25 files in other folders)
